Infra: Update Ansible ARM Nomad
- Add three new ThunderX servers
- Mark two existing ThunderX servers as out of order, since
  they're inaccessible
- Fix microarchitecture of ARM build servers

Change-Id: I57f5f3f8436a9082a264eb4e0fa4faac77ad53be
Signed-off-by: Juraj Linkeš <juraj.linkes@pantheon.tech>

--- a/resources/tools/testbed-setup/ansible/inventories/lf_inventory/host_vars/10.30.51.66.yaml
+++ b/resources/tools/testbed-setup/ansible/inventories/lf_inventory/host_vars/10.30.51.66.yaml
@@ -3,7 +3,7 @@
 
 hostname: "s51-nomad"
 inventory_ipmi_hostname: "10.30.50.66"
-cpu_microarchitecture: "thunderx2"
+cpu_microarchitecture: "thunderx"
 
 # User management.
 users:
