--- a/resources/tools/testbed-setup/ansible/inventories/lf_inventory/host_vars/10.30.51.67.yaml
+++ b/resources/tools/testbed-setup/ansible/inventories/lf_inventory/host_vars/10.30.51.67.yaml
@@ -3,7 +3,7 @@
 
 hostname: "s49-nomad"
 inventory_ipmi_hostname: "10.30.50.67"
-cpu_microarchitecture: "thunderx2"
+cpu_microarchitecture: "thunderx"
 
 # User management.
 users:
