--- a/resources/tools/testbed-setup/ansible/inventories/lf_inventory/host_vars/10.30.51.38.yaml
+++ b/resources/tools/testbed-setup/ansible/inventories/lf_inventory/host_vars/10.30.51.38.yaml
@@ -1,8 +1,8 @@
 ---
-# file: host_vars/10.30.51.68.yaml
+# file: host_vars/10.30.51.38.yaml
 
-hostname: "s50-nomad"
-inventory_ipmi_hostname: "10.30.50.68"
+hostname: "fdio-marvell-dev"
+inventory_ipmi_hostname: "10.30.50.38"
 cpu_microarchitecture: "thunderx"
 
 # User management.
@@ -31,7 +31,7 @@ nomad_name: "{{ hostname }}-{{ ansible_architecture }}"
 nomad_node_role: "client"
 nomad_node_class: "builder"
 nomad_options:
-  driver.raw_exec.enable: 1
+  driver.raw_exec.enable: 0
   docker.cleanup.image: false
   docker.privileged.enabled: true
   driver.whitelist: "docker,raw_exec,exec"
