Report 2005: Add data
Change-Id: I8c0be475c73aa5c9c3d04780851faf25f1156aed
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -905,6 +905,7 @@
     vpp-performance-changes-2n-skx-cmp-2001.0-4:
       csit-vpp-perf-report-iterative-2005-2n-skx:
         - 100 # NDRPDR sel 2001.0-4
+        - 101 # NDRPDR sel 2001.0-4
 
 #    vpp-performance-changes-nfv-2n-skx-ref:
 #      csit-vpp-perf-verify-2001-2n-skx:
@@ -2430,6 +2431,7 @@
       - 93  # NDRPDR sel env 4
       - 94  # NDRPDR sel env 4
       - 100 # NDRPDR sel 2001.0-4
+      - 101 # NDRPDR sel 2001.0-4
       - 42  # MRR sel
       - 99  # MRR sel env 4
       - 48  # Reconf
