feat(tests): Fix scaling of 6p3nic
Signed-off-by: Peter Mikus <peter.mikus@protonmail.ch>
Change-Id: I84d9cf2892423e62b116b07982d3e87120b66271

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Cisco and/or its affiliates.
+# Copyright (c) 2024 Cisco and/or its affiliates.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at:
@@ -26,15 +26,13 @@
 
 [tox]
 # Fast and brief checkers to front, slow or verbose checkers to back.
-envlist = job_spec, copyright_year, gpl_license,
-    new_line_length, line_length, autogen, pylint
+envlist = copyright_year, gpl_license, new_line_length, line_length, autogen,
+  pylint
 
 # The following is needed as tox requires setup.py by default.
 skipsdist = true
 # Just a shorthand to avoid long lines.
 script_dir = ./resources/libraries/bash/entry/tox
-
-# TODO: Tox prints various warnings. Figure them out and fix them.
 
 # Recommended ordering withinn testenv definition:
 # + General comments.
@@ -44,25 +42,23 @@ script_dir = ./resources/libraries/bash/entry/tox
 # + whitelist_externals to enable bash.
 # + Commands with a single bash to launch the corresponding script.
 
-# Keep testenvs sorted alphabetically, please.
-
 [testenv:autogen]
 setenv = PYTHONPATH = {toxinidir}
-whitelist_externals = /bin/bash
+whitelist_externals = bash
 commands = bash {[tox]script_dir}/autogen.sh
 
 [testenv:copyright_year]
-whitelist_externals = /bin/bash
+whitelist_externals = bash
 commands = bash {[tox]script_dir}/copyright_year.sh
 
 [testenv:gpl_license]
-whitelist_externals = /bin/bash
+whitelist_externals = bash
 commands = bash {[tox]script_dir}/gpl_license.sh
 
 [testenv:line_length]
 # Fix all transgressions and remove the ignore_outcome flag.
 ignore_outcome = true
-whitelist_externals = /bin/bash
+whitelist_externals = bash
 commands = bash {[tox]script_dir}/line.sh
 
 [testenv:new_line_length]
@@ -70,7 +66,7 @@ commands = bash {[tox]script_dir}/line.sh
 # As current implementation is too dumb to filter those out,
 # the checker has to remain non-voting.
 ignore_outcome = true
-whitelist_externals = /bin/bash
+whitelist_externals = bash
 commands = bash {[tox]script_dir}/new_line.sh
 
 [testenv:pylint]
@@ -79,12 +75,5 @@ ignore_outcome = true
 setenv = PYTHONPATH = {toxinidir}
 basepython = python3
 deps = -r ./requirements.txt
-whitelist_externals = /bin/bash
+whitelist_externals = bash
 commands = bash {[tox]script_dir}/pylint.sh
-
-# Keep testenvs sorted alphabetically, please.
-
-# TODO: Create voting "pylint violations should not increase" checker.
-# TODO: Create voting checker to reject suites with Force Tags of other suite.
-# TODO: Create voting checker against tags not in tag_documentation.rst file.
-#       to override line check.
