feat(tox): add copyright year fixer script
It uses rather simple sed commands, but seems to work well enough.

+ Improve readme.
+ Shortened comments about why 3 lines.

Change-Id: I50b395dfeb586f671f7c4c82f22369de90b351ec
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,10 @@ commands = bash {[tox]script_dir}/autogen.sh
 whitelist_externals = bash
 commands = bash {[tox]script_dir}/copyright_year.sh
 
+[testenv:fix_copyright_year]
+whitelist_externals = bash
+commands = bash {[tox]script_dir}/fix_copyright_year.sh
+
 [testenv:gpl_license]
 whitelist_externals = bash
 commands = bash {[tox]script_dir}/gpl_license.sh
