--- a/csit.infra.dash/app/cdash/data/data.yaml
+++ b/csit.infra.dash/app/cdash/data/data.yaml
@@ -87,6 +87,27 @@
     - telemetry
     - test_id
     - version
+# - data_type: trending
+#   partition: test_type
+#   partition_name: soak
+#   path: s3://fdio-docs-s3-cloudfront-index/csit/parquet/trending
+#   schema: trending_hoststack
+#   columns:
+#     - job
+#     - build
+#     - dut_type
+#     - dut_version
+#     - hosts
+#     - tg_type
+#     - result_critical_rate_lower_bandwidth_unit
+#     - result_critical_rate_lower_bandwidth_value
+#     - result_critical_rate_lower_rate_unit
+#     - result_critical_rate_lower_rate_value
+#     - start_time
+#     - passed
+#     - telemetry
+#     - test_id
+#     - version
 - data_type: iterative
   partition: test_type
   partition_name: mrr
@@ -338,6 +359,7 @@
     - build
     - dut_type
     - dut_version
+    # - hosts
     - start_time
     - passed
     - test_id
@@ -361,6 +383,7 @@
     - build
     - dut_type
     - dut_version
+    # - hosts
     - start_time
     - passed
     - test_id
@@ -394,6 +417,7 @@
     - build
     - dut_type
     - dut_version
+    - hosts
     - tg_type
     - result_bandwidth_unit
     - result_bandwidth_value
