fix(topology): copy PCI address from other 2n-icx
Ticket: CSIT-1956

Change-Id: Id63ed1eb59703c16c806076ef6bdc259fc3749a8
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/topologies/available/lf_2n_icx_testbed212.yaml
+++ b/topologies/available/lf_2n_icx_testbed212.yaml
@@ -107,7 +107,7 @@ nodes:
       port12:
         # s72-t212-tg1-c6/p2 - 100GE port2 Intel E810-CQDA2 2p100GE.
         mac_address: "b4:96:91:b2:a7:01"
-        pci_address: "0000:ca:00.1"
+        pci_address: "0000:cc:00.0"
         ip4_address: "172.16.120.2"
         driver: ice
         link: link11
